# brainchain

./: .gitignore  CLAUDE.md  README.md  brainchain.py  config.toml  go.mod  go.sum  install.sh  orchestrator-session-handoff.md  pyproject.toml  test_e2e.md  webserver.py
.claude/agents/: analyst.md  code-reviewer.md  implementer.md  librarian.md  oracle.md  planner.md
.sisyphus/: boulder.json
.sisyphus/plans/: brainchain-orchestrator.md
brainchain/: __init__.py  __main__.py  cli.py  compat.py  config.py  exceptions.py  executor.py  ui.py  workflow.py
brainchain/adapters/: __init__.py  base.py  claude.py  codex.py  registry.py
brainchain/claude_code/: __init__.py  hooks.py  top_bar.py
brainchain/context/: __init__.py  compressor.py  counter.py  hooks.py  monitor.py
brainchain/lsp/: __init__.py  ast_tools.py  client.py  operations.py  servers.py
brainchain/mcp/: __init__.py  client.py  prompt_injection.py  registry.py  servers.py
brainchain/plugins/: __init__.py  commands.py  hooks.py  loader.py
brainchain/session/: __init__.py  database.py  manager.py  models.py  naming.py  recovery.py
brainchain/tui/: __init__.py  app.py  keybindings.py  themes.py
brainchain/tui/views/: __init__.py  chat.py  logs.py  plan.py  sessions.py  tasks.py
brainchain/tui/widgets/: __init__.py  command_palette.py  session_palette.py  sidebar.py  statusbar.py
cmd/chat/: go.mod  go.sum  main.go  tui.go
cmd/chat/internal/adapter/: adapter.go  claude.go  codex.go  registry.go
cmd/chat/internal/config/: config.go
cmd/chat/internal/context/: compressor.go  counter.go
cmd/chat/internal/executor/: executor.go
cmd/chat/internal/lsp/: client.go  manager.go  mcp.go  servers.go  tools.go
examples/plugins/hello_plugin/: __init__.py  commands.py  hooks.py
plans/: context-compression.md  session-naming-ui.md  tui-dashboard.md
prompts/: analyst.md  code_reviewer.md  db_reader.md  doc_reader.md  explore.md  fixer.md  implementer.md  librarian.md  orchestrator.md  plan_validator.md  planner.md  researcher.md  summarizer.md
(+10 files in other folders)
