[project]
name = "brainchain"
version = "0.3.0"
description = "Multi-CLI AI Orchestrator with workflow automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brainchain Contributors"}
]
keywords = ["ai", "orchestrator", "cli", "workflow", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []  # Core has no external dependencies - pure Python!

[project.optional-dependencies]
# Session management uses stdlib sqlite3 - no extra dependencies needed
session = []

# MCP integration for external tool support
mcp = ["mcp>=1.0.0"]

# LSP/AST tools for semantic code analysis
lsp = [
    "pygls>=1.3.0",
    "lsprotocol>=2024.0.0",
    "ast-grep-py>=0.31.0",
]

# TUI dashboard with textual
tui = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]

# All optional features
all = [
    "mcp>=1.0.0",
    "pygls>=1.3.0",
    "lsprotocol>=2024.0.0",
    "ast-grep-py>=0.31.0",
    "textual>=0.50.0",
    "rich>=13.0.0",
]

[project.scripts]
brainchain = "brainchain.cli:main"

[project.urls]
Homepage = "https://github.com/popododo0720/brainchain"
Repository = "https://github.com/popododo0720/brainchain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brainchain"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
